--- a/requirements.txt
+++ b/requirements.txt
@@ -1,163 +1,250 @@
-aiohttp @ file:///Users/runner/miniforge3/conda-bld/aiohttp_1663851042718/work
-aiosignal @ file:///home/conda/feedstock_root/build_artifacts/aiosignal_1636093929600/work
-altair @ file:///tmp/build/80754af9/altair_1599835197802/work
+alabaster==0.7.12
+anaconda-client==1.7.2
+anaconda-navigator==1.9.12
+anaconda-project==0.8.3
 appdirs==1.4.4
-appnope @ file:///opt/concourse/worker/volumes/live/5f13e5b3-5355-4541-5fc3-f08850c73cf9/volume/appnope_1606859448618/work
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///opt/concourse/worker/volumes/live/0628405f-5e68-4591-7d86-fffe9a78a449/volume/argon2-cffi-bindings_1644569695448/work
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-async-timeout @ file:///home/conda/feedstock_root/build_artifacts/async-timeout_1640026696943/work
-attrs @ file:///opt/conda/conda-bld/attrs_1642510447205/work
-autopep8 @ file:///home/conda/feedstock_root/build_artifacts/autopep8_1635267974115/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-beautifulsoup4 @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_croot-cdiouih5/beautifulsoup4_1650462164803/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-blinker==1.4
-bokeh @ file:///opt/concourse/worker/volumes/live/d6babf7c-5642-471b-780f-d086ea2dc02d/volume/bokeh_1638362832384/work
-Bottleneck @ file:///Users/runner/miniforge3/conda-bld/bottleneck_1611195639554/work
-brotlipy==0.7.0
-cachetools @ file:///tmp/build/80754af9/cachetools_1619597386817/work
-Cartopy @ file:///opt/concourse/worker/volumes/live/25a39af7-6904-4ccd-6acb-63ce37e0cb46/volume/cartopy_1612289802100/work
-certifi==2022.9.24
-cffi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/croot-2p6q7e2r/cffi_1642701115063/work
-cftime @ file:///opt/concourse/worker/volumes/live/007f2832-8aad-4383-6f4a-39fe1618b401/volume/cftime_1638358490129/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-click @ file:///opt/concourse/worker/volumes/live/709f530a-8ffd-4e02-4f5f-9b3cfddd0e0b/volume/click_1646056616410/work
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1632508026186/work
-colorama @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_b8ecd5af-5e60-48b8-80ac-92164ecb9b9bxkf0tkfp/croots/recipe/colorama_1657009097162/work
-commonmark @ file:///Users/ktietz/demo/mc3/conda-bld/commonmark_1630649545323/work
-cryptography @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_b470f7cb-c8f1-42c9-b84f-23789ea77e7c9difcqh4/croots/recipe/cryptography_1652101134392/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-cytoolz==0.11.0
-dask @ file:///home/conda/feedstock_root/build_artifacts/dask-core_1625867571991/work
-debugpy @ file:///opt/concourse/worker/volumes/live/e17abc9f-08a9-4dca-4e9b-e6d24bde47ce/volume/debugpy_1637091828617/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-distributed @ file:///Users/runner/miniforge3/conda-bld/distributed_1625875224164/work
-entrypoints @ file:///opt/concourse/worker/volumes/live/84dd3e87-c86b-405f-5113-9d1bdbfd10b9/volume/entrypoints_1649926452122/work
-et-xmlfile==1.1.0
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastjsonschema @ file:///tmp/build/80754af9/python-fastjsonschema_1620414857593/work/dist
-fonttools==4.25.0
-frozenlist @ file:///Users/runner/miniforge3/conda-bld/frozenlist_1659557035368/work
-fsspec @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_525f1e44-6d75-452d-9a70-93c42355faa3jwokas7u/croots/recipe/fsspec_1652802115470/work
+applaunchservices==0.2.1
+appnope==0.1.0
+appscript==1.0.1
+argh==0.26.2
+asn1crypto==1.3.0
+astroid==2.3.3
+astropy==4.0
+atomicwrites==1.3.0
+attrs==19.3.0
+autopep8==1.4.4
+Babel==2.8.0
+backcall==0.1.0
+backports.functools-lru-cache @ file:///tmp/build/80754af9/backports.functools_lru_cache_1618170165463/work
+backports.shutil-get-terminal-size==1.0.0
+backports.tempfile @ file:///home/linux1/recipes/ci/backports.tempfile_1610991236607/work
+backports.weakref==1.0.post1
+beautifulsoup4==4.8.2
+bitarray==1.2.1
+bkcharts==0.2
+bleach==3.1.0
+bokeh==1.4.0
+boto==2.49.0
+Bottleneck==1.3.2
+branca @ file:///home/conda/feedstock_root/build_artifacts/branca_1609346930842/work
+Cartopy==0.17.0
+certifi==2019.11.28
+cffi==1.14.0
+cftime @ file:///opt/concourse/worker/volumes/live/7939d361-b834-4ed8-4ee4-9485cdd70a77/volume/cftime_1621828159545/work
+chardet==3.0.4
+Click==7.0
+cloudpickle==1.3.0
+clyent==1.2.2
+colorama==0.4.3
+conda==4.10.3
+conda-build==3.18.11
+conda-package-handling @ file:///opt/concourse/worker/volumes/live/d106838d-eaa7-40fd-5437-9d95a7db5458/volume/conda-package-handling_1618262135990/work
+conda-verify==3.4.2
+contextlib2==0.6.0.post1
+cryptography==2.8
+cycler==0.10.0
+Cython==0.29.15
+cytoolz==0.10.1
+dask==2.11.0
+decorator==4.4.1
+defusedxml==0.6.0
+diff-match-patch==20181111
+distributed==2.11.0
+docutils==0.16
+entrypoints==0.3
+et-xmlfile==1.0.1
+fastcache==1.1.0
+filelock==3.0.12
+flake8==3.7.9
+Flask==1.1.1
+folium @ file:///home/conda/feedstock_root/build_artifacts/folium_1615570722684/work
+fsspec==0.6.2
 future==0.18.2
-gitdb @ file:///tmp/build/80754af9/gitdb_1617117951232/work
-GitPython @ file:///tmp/build/80754af9/gitpython_1624609474443/work
-HeapDict @ file:///Users/ktietz/demo/mc3/conda-bld/heapdict_1630598515714/work
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-importlib-metadata @ file:///opt/concourse/worker/volumes/live/9f82d2cd-acb0-490f-6640-deddcdde7174/volume/importlib-metadata_1648562428986/work
-importlib-resources @ file:///tmp/build/80754af9/importlib_resources_1625135880749/work
-ipykernel @ file:///opt/concourse/worker/volumes/live/675cc243-e35d-4e85-47e2-838adcdd7698/volume/ipykernel_1647000791373/work/dist/ipykernel-6.9.1-py3-none-any.whl
-ipython @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_651b0309-eccd-4278-bb05-da83352f345cw81ya025/croots/recipe/ipython_1657652219297/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1634143127070/work
-jedi @ file:///opt/concourse/worker/volumes/live/fb2e45f1-1dff-42fa-6cab-bd094a4c4372/volume/jedi_1644315264796/work
-Jinja2 @ file:///opt/conda/conda-bld/jinja2_1647436528585/work
-joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
-jsonschema @ file:///opt/concourse/worker/volumes/live/1beb334e-6e10-4087-469b-f1503d43266f/volume/jsonschema_1650025993686/work
-jupyter-client @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_4d0a367d-74c5-447f-831e-3e1fd3984797bfrg56pj/croots/recipe/jupyter_client_1650622206454/work
-jupyter-core @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_8ba802e0-15f6-4a45-a9ee-144034526783uwxtvvew/croots/recipe/jupyter_core_1651671235924/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-kiwisolver @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_ca2945cc-8f2f-407b-8e24-f05d29ee2f4fvto5sdlk/croots/recipe/kiwisolver_1653292053344/work
-locket @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_81b4c56b-0395-495d-81c1-83208d36944d357hqdd0/croots/recipe/locket_1652903116052/work
-Markdown==3.3.6
-MarkupSafe @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_d4a9444f-bd4c-4043-b47d-cede33979b0fve7bm42r/croots/recipe/markupsafe_1654597878200/work
-matplotlib @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_croot-hkd3cnd2/matplotlib-suite_1647506470899/work
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
-MetPy @ file:///home/conda/feedstock_root/build_artifacts/metpy_1657039291976/work
-mistune @ file:///opt/concourse/worker/volumes/live/95802d64-d39c-491b-74ce-b9326880ca54/volume/mistune_1594373201816/work
-msgpack @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_8471ad7f-dce1-4146-86d4-c2864258a94duzpja450/croots/recipe/msgpack-python_1652362671722/work
-multidict @ file:///Users/runner/miniforge3/conda-bld/multidict_1648882473642/work
-munkres==1.1.4
-nbclient @ file:///opt/concourse/worker/volumes/live/c997a406-d366-4a23-5c1f-00126bcb589a/volume/nbclient_1650308377979/work
-nbconvert @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_croot-mv2swkk7/nbconvert_1649751922903/work
-nbformat @ file:///opt/concourse/worker/volumes/live/5df1c094-b23e-45d9-43de-8e6c717c9b9d/volume/nbformat_1649844930724/work
-nest-asyncio @ file:///opt/concourse/worker/volumes/live/a7f89d20-060a-480e-487d-25959e806725/volume/nest-asyncio_1649847918874/work
-netCDF4 @ file:///opt/concourse/worker/volumes/live/ff87caa0-9832-480f-5729-5ff5688579de/volume/netcdf4_1624383291230/work
-notebook @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_98mevid06x/croots/recipe/notebook_1659083668559/work
-numexpr @ file:///opt/concourse/worker/volumes/live/08cad8ca-d65d-45ed-6618-cdc14288843b/volume/numexpr_1614798502471/work
-numpy @ file:///opt/concourse/worker/volumes/live/fc836c6e-a34d-4d04-5978-344db04f0bda/volume/numpy_and_numpy_base_1603558298125/work
-openpyxl @ file:///tmp/build/80754af9/openpyxl_1632777717936/work
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas==1.4.3
-pandas-bokeh==0.5.5
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-panel==0.12.6
-param==1.12.0
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-partd @ file:///opt/conda/conda-bld/partd_1647245470509/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow==9.2.0
+gevent==1.4.0
+glob2==0.7
+gmpy2==2.0.8
+greenlet==0.4.15
+h5py==2.10.0
+HeapDict==1.0.1
+html5lib==1.0.1
+hypothesis==5.5.4
+idna==2.8
+imageio==2.6.1
+imagesize==1.2.0
+importlib-metadata==1.5.0
+importlib-resources @ file:///opt/concourse/worker/volumes/live/436067cd-cb79-4597-776e-414c3ecb054c/volume/importlib_resources_1622572690953/work
+intervaltree==3.0.2
+ipykernel==5.1.4
+ipython==7.12.0
+ipython_genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.14.1
+Jinja2==2.11.1
+joblib==0.14.1
+json5==0.9.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.1.0
+jupyter-core==4.6.1
+jupyterlab==1.2.6
+jupyterlab-server==1.0.6
+keyring==21.1.0
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+libarchive-c==2.8
+lief==0.9.0
+llvmlite==0.31.0
+locket==0.2.0
+lxml==4.5.0
+MarkupSafe==1.1.1
+matplotlib==3.1.3
+mccabe==0.6.1
+MetPy @ file:///home/conda/feedstock_root/build_artifacts/metpy_1608625305292/work
+mistune==0.8.4
+mkl-fft==1.0.15
+mkl-random==1.1.0
+mkl-service==2.3.0
+mock==4.0.1
+more-itertools==8.2.0
+mpmath==1.1.0
+msgpack==0.6.1
+multipledispatch==0.6.0
+navigator-updater==0.2.1
+nbconvert==5.6.1
+nbformat==5.0.4
+netCDF4==1.5.3
+networkx==2.4
+nltk==3.4.5
+nose==1.3.7
+notebook==6.0.3
+numba==0.48.0
+numexpr==2.7.1
+numpy==1.18.1
+numpydoc==0.9.2
+olefile==0.46
+openpyxl==3.0.3
+OWSLib @ file:///tmp/build/80754af9/owslib_1620711747705/work
+packaging==20.1
+pandas==1.0.1
+pandocfilters==1.4.2
+parso==0.5.2
+partd==1.1.0
+path==13.1.0
+pathlib2==2.3.5
+pathtools==0.1.2
+patsy==0.5.1
+pep8==1.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.0.0
 Pint @ file:///home/conda/feedstock_root/build_artifacts/pint_1601019190097/work
-plotly @ file:///Users/nicolas/miniconda2/conda-bld/plotly_1624908964319/work/packages/python/plotly/dist/plotly-5.1.0.tar.gz
-pooch @ file:///tmp/build/80754af9/pooch_1623324770023/work
-prometheus-client @ file:///opt/conda/conda-bld/prometheus_client_1643788673601/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
-protobuf==3.20.1
-psutil @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_c9b604bf-685f-47f6-8304-238e4e70557e1o7mmsot/croots/recipe/psutil_1656431274701/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pyarrow==8.0.0
-pycodestyle @ file:///tmp/build/80754af9/pycodestyle_1636635402688/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pyct==0.4.8
-pydeck @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_4a84757e-f32c-49f9-81fa-1d97412b10e5thsxyo5d/croots/recipe/pydeck_1657894568410/work
-Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
-pymeteo==1.0.2
-pymodbus @ file:///home/conda/feedstock_root/build_artifacts/pymodbus_1644118792326/work
-Pympler @ file:///tmp/build/80754af9/pympler_1602785470644/work
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
-pyproj @ file:///opt/concourse/worker/volumes/live/abf84cfa-67da-4bf5-68bf-9a67c9075b4d/volume/pyproj_1614277925951/work
-pyrsistent @ file:///opt/concourse/worker/volumes/live/ac52847c-5646-4583-7286-af47061006cb/volume/pyrsistent_1636111017177/work
-pyserial @ file:///home/conda/feedstock_root/build_artifacts/pyserial_1606128640882/work
-pyserial-asyncio @ file:///home/conda/feedstock_root/build_artifacts/pyserial-asyncio_1644051879152/work
+pkginfo==1.5.0.1
+plotly @ file:///tmp/build/80754af9/plotly_1593522991827/work
+pluggy==0.13.1
+ply==3.11
+pooch @ file:///tmp/build/80754af9/pooch_1616506788605/work
+prometheus-client==0.7.1
+prompt-toolkit==3.0.3
+psutil==5.6.7
+ptyprocess==0.6.0
+py==1.8.1
+pycodestyle==2.5.0
+pycosat==0.6.3
+pycparser==2.19
+pycrypto==2.6.1
+pycurl==7.43.0.5
+pydocstyle==4.0.1
+pyepsg==0.4.0
+pyflakes==2.1.1
+Pygments==2.5.2
+pykdtree @ file:///opt/concourse/worker/volumes/live/fb37a722-955d-4a85-5a8d-be8e81ed46f0/volume/pykdtree_1612299271617/work
+pylint==2.4.4
+pyodbc===4.0.0-unsupported
+pyOpenSSL==19.1.0
+pyparsing==2.4.6
+pyproj==2.3.1
+pyrsistent==0.15.7
 pyshp @ file:///tmp/build/80754af9/pyshp_1610641829514/work
-PySocks @ file:///opt/concourse/worker/volumes/live/85a5b906-0e08-41d9-6f59-084cee4e9492/volume/pysocks_1594394636991/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_1caf090c-01b6-4973-adac-d2eb884a674e7zonb9eb/croots/recipe/pytz_1654762641285/work
-pyviz-comms==2.1.0
-PyYAML==6.0
-pyzmq @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_15f7a459-ad98-422b-b8da-cbf1f626e2115nt0ocwy/croots/recipe/pyzmq_1657724193704/work
+PySocks==1.7.1
+pytest==5.3.5
+pytest-arraydiff==0.3
+pytest-astropy==0.8.0
+pytest-astropy-header==0.1.2
+pytest-doctestplus==0.5.0
+pytest-openfiles==0.4.0
+pytest-remotedata==0.3.2
+python-dateutil==2.8.1
+python-jsonrpc-server==0.3.4
+python-language-server==0.31.7
+pytz==2019.3
+PyWavelets==1.1.1
+PyYAML==5.3
+pyzmq==18.1.1
+QDarkStyle==2.8
+QtAwesome==0.6.1
+qtconsole==4.6.0
 QtPy==1.9.0
-requests @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_516b78ce-034d-4395-b9b5-1d78c2847384qtnol99l/croots/recipe/requests_1657734628886/work
-rich @ file:///opt/conda/conda-bld/rich_1641600379360/work
-scikit-learn @ file:///opt/concourse/worker/volumes/live/0c77b068-a026-4996-6842-33e5544ec13b/volume/scikit-learn_1614446667823/work
-scipy @ file:///opt/concourse/worker/volumes/live/851144f0-1c7a-4126-77d6-a95b423511d6/volume/scipy_1614022837273/work
-semver @ file:///tmp/build/80754af9/semver_1603822362442/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
-Shapely @ file:///opt/concourse/worker/volumes/live/6b1154d4-ac55-4c1c-7d85-35eb5a52e465/volume/shapely_1632813507310/work
-SHARPpy==1.4.0+10.g19175269
-siphon @ file:///Users/runner/miniforge3/conda-bld/siphon_1615160787527/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-smmap @ file:///tmp/build/80754af9/smmap_1611694433573/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1623949099177/work
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1636706018808/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-streamlit @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_772487d1-bfbf-4b89-a425-e2900b940b1flihd3sr0/croots/recipe/streamlit_1657914744543/work
-tblib @ file:///Users/ktietz/demo/mc3/conda-bld/tblib_1629402031467/work
-tenacity @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_15d3bbab-3059-4048-adcb-986fb2669dd5nujdx5qd/croots/recipe/tenacity_1657899116644/work
-terminado @ file:///opt/concourse/worker/volumes/live/77a7a2fc-5569-4ff8-4f8c-22be111c7b5e/volume/terminado_1644322600385/work
-testpath @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_aaf4aec7-dbb6-43d6-9707-824338b4efc82yrt6xjp/croots/recipe/testpath_1655908558843/work
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-toolz @ file:///tmp/build/80754af9/toolz_1636545406491/work
-tornado @ file:///opt/concourse/worker/volumes/live/05341796-4198-4ded-4a9a-332fde3cdfd1/volume/tornado_1606942323372/work
-tqdm==4.62.3
-traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
-typing_extensions @ file:///opt/conda/conda-bld/typing_extensions_1647553014482/work
-tzlocal @ file:///opt/concourse/worker/volumes/live/e8019c57-0c46-4711-7b15-42c0d1458f29/volume/tzlocal_1597435713355/work
-urllib3 @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_53dwuk2xkk/croots/recipe/urllib3_1659110467968/work
-validators @ file:///tmp/build/80754af9/validators_1612286467315/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+requests==2.22.0
+retrying==1.3.3
+rope==0.16.0
+Rtree==0.9.3
+ruamel_yaml==0.15.87
+scikit-image==0.16.2
+scikit-learn==0.22.1
+scipy==1.4.1
+seaborn==0.10.0
+Send2Trash==1.5.0
+Shapely==1.6.4.post2
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+siunits==0.0.6
+six==1.14.0
+snowballstemmer==2.0.0
+sortedcollections==1.1.2
+sortedcontainers==2.1.0
+soupsieve==1.9.5
+Sphinx==2.4.0
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+sphinxcontrib-websupport==1.2.0
+spyder==4.0.1
+spyder-kernels==1.8.1
+SQLAlchemy==1.3.13
+statsmodels==0.11.0
+sympy==1.5.1
+tables==3.6.1
+tblib==1.6.0
+terminado==0.8.3
+testpath==0.4.4
+toolz==0.10.0
+tornado==6.0.3
+tqdm==4.42.1
+traitlets==4.3.3
+ujson==1.35
+unicodecsv==0.14.1
+urllib3==1.25.8
+watchdog==0.10.2
+wcwidth==0.1.8
 webencodings==0.5.1
-widgetsnbextension @ file:///opt/concourse/worker/volumes/live/b79a6318-0a66-44c8-744e-87eba0d202e8/volume/widgetsnbextension_1645009378090/work
+Werkzeug==1.0.0
+widgetsnbextension==3.5.1
 windrose @ file:///home/conda/feedstock_root/build_artifacts/windrose_1600276615897/work
-xarray @ file:///home/conda/feedstock_root/build_artifacts/xarray_1621474818012/work
-xlrd @ file:///tmp/build/80754af9/xlrd_1608072521494/work
-yarl @ file:///Users/runner/miniforge3/conda-bld/yarl_1648966557152/work
-zict==2.1.0
-zipp @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_b279673d-f037-44c7-8773-c5a6b6f51037d3wfr9cq/croots/recipe/zipp_1652341773612/work
+wrapt==1.11.2
+wurlitzer==2.0.0
+xarray @ file:///tmp/build/80754af9/xarray_1620826949436/work
+xlrd==1.2.0
+XlsxWriter==1.2.7
+xlwings==0.17.1
+xlwt==1.3.0
+xmltodict==0.12.0
+yapf==0.28.0
+zict==1.0.0
+zipp==2.2.0
